	works, and does not miss the exit probe.
	* test/unittest/dtrace-util/tst.ProcInvoke.sh*: Test that dtrace -c
	works, and does not miss the exec-success nor exit probes.
	* test/unittest/dtrace-util/err.NoProcNoGrab.sh: Test that
	dtrace -p of a nonexistent process fails immediately
	* test/unittest/dtrace-util/err.NoProcNoInvoke.sh: Likewise, for
	dtrace -c of a nonexistent binary.

2012-08-01  Nick Alcock  <nick.alcock@oracle.com>

	Lazy kernel module path initialization.

	* libdtrace/dt_module.c (dtrace_update): Move kernpath update...
	(dt_kern_path_lookup_by_name): ... to here.
	(dt_kern_module_init): Split out dm_file initialization...
	(dt_kern_module_find): ... to this new function.
	(dt_module_load): Call it at module load time.
	* INCOMPATIBILITIES: Note the effect of this on the library API.

	* test/unittest/buffering/tst.cputime.sh: No longer expected to fail.
	* test/unittest/sched/test.options: These tests are no longer XFAIL...
	* test/unittest/sched/tst.enqueue.d: ... except this one.
	* test/unittest/tracemem/tst.init_task.d: Avoid cast problem.
	* libproc/Psymtab.c: Coding style fix.
	* README: Mention CTF external variable support.

2012-07-30  Nick Alcock  <nick.alcock@oracle.com>

	Support CTF types for global kernel variables (the ` operator).

	* libdtrace-ctf: Updated: ctf_lookup_variable() is now available.
	* libdtrace/dt_module.c (dtrace_symbol_type): Use it in new
	code for kernel module symbol->type mapping.
	(dtrace_lookup_by_name): Only update the syminfo pointer if it
	is non-NULL.
	(dt_modsym_update): Many new unimportant symbols: look for name
	prefixes in most cases, not arbitrary substrings.
	(dt_module_getctf): Improve CTF failure error message.
	(dt_module_load): Change the CTF section name.
	(dt_kern_module_init): Change comment accordingly.
	* libproc/Psymtab.c (Pbuild_file_symtab): Change the CTF
	section name.  Support CTF section name prefixes.

	Testsuite updates.
